--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
-<body>
+<body class="body">
     <!-- PRELOADER -->
     <div class="loader">
         <div class="loader__onda">
